--- a/templates/shopping_list.html
+++ b/templates/shopping_list.html
@@ -29,6 +29,7 @@
   </ul>
 </nav>
 
+<!-- Left side column to display list of cart items -->
 <div class="container-fluid">
   <div class="row content">
     <div class="col-sm-9">
@@ -85,6 +86,7 @@
   </div>
 
     </div>
+    <!-- Right side column to display cart price and totals -->
     <div class="col-sm-3 bg-white">
         <div class="container card bg-light">
           <h2 class="my-5 ">Totals</h2>
