Added database for items
Added a sqlite database for items. Added functionality to add items and shopping list now queries the website for item data.

--- a/templates/add_item.html
+++ b/templates/add_item.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="column is-4 is-offset-4">
-    <h3 class="title">Login</h3>
+    <h3 class="title">Add Item</h3>
     <div class="box">
         {% with messages = get_flashed_messages() %}
         {% if messages %}
@@ -11,20 +11,24 @@
             </div>
         {% endif %}
         {% endwith %}
-        <form method="POST" action="/login">
+        <form id="myForm" method="POST">
             <div class="field">
                 <div class="control">
-                    <input class="input is-large" type="email" name="email" placeholder="Your Email" autofocus="">
+                    <input class="input is-large" name="name" placeholder="Name" autofocus="">
                 </div>
             </div>
 
             <div class="field">
                 <div class="control">
-                    <input class="input is-large" type="password" name="password" placeholder="Your Password">
+                    <input class="input is-large" name="price" placeholder="Price">
                 </div>
             </div>
-            <button class="button is-block is-info is-large is-fullwidth">Login</button>
+            <button class="button is-block is-info is-large is-fullwidth">Add</button>
         </form>
     </div>
 </div>
+<script type=text/javascript>
+    $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
+    document.getElementById("myForm").action = $SCRIPT_ROOT + '/_add_item';
+</script>
 {% endblock %}
