--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,35 @@
 
     <body>
         <section class="hero is-primary is-fullheight">
+            
+            <div class="hero-head">
+                <nav class="navbar">
+                    <div class="container">
     
+                        <div id="navbarMenuHeroA" class="navbar-menu">
+                            <div class="navbar-end">
+                                {% if current_user.is_authenticated %}
+                                <a href="{{ url_for('main.index') }}" class="navbar-item">
+                                    Home
+                                </a>
+                                <a href="{{ url_for('main.add_item') }}" class="navbar-item">
+                                    Add item
+                                </a>
+                                {% endif %}
+                                {% if not current_user.is_authenticated %}
+                                <a href="{{ url_for('auth.login') }}" class="navbar-item">
+                                    Login
+                                </a>
+                                <a href="{{ url_for('auth.signup') }}" class="navbar-item">
+                                    Sign Up
+                                </a>
+                                {% endif %}
+                            </div>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+
             <div class="hero-body">
                 <div class="container has-text-centered">
                    {% block content %}
