Implemented the coupon code feature for the shopping cart.

--- a/templates/shopping_list.html
+++ b/templates/shopping_list.html
@@ -112,10 +112,10 @@
           </div>
 
           <div class="form-group input-group">
-            <input type="text" class="form-control" placeholder="Coupon Code">
-            <button type="button" class="btn btn-primary" id="coupon_code">Apply</button>
+            <input type="text" class="form-control" placeholder="Coupon Code" id="coupon-code">
+            <button type="button" class="btn btn-primary not-applied" id="coupon-apply">Apply</button>
           </div>
-
+        <p id="coupon-success"></p>
         </div>
 
       </div>
