--- a/project/templates/shopping_list.html
+++ b/project/templates/shopping_list.html
@@ -40,17 +40,6 @@
   <h1>Shopping List Calculator</h1>
 </div>
 
-<nav class="navbar navbar-expand-sm bg-primary navbar-dark">
-  <ul class="navbar-nav">
-    <li class="nav-item link">
-      <a class="nav-link" href="#">Browse</a>
-    </li>
-    <li class="nav-item active">
-      <a class="nav-link" href="#">Cart</a>
-    </li>
-  </ul>
-</nav>
-
 <!-- Left side column to display list of cart items -->
 <div class="container-fluid">
   <div class="row content">
@@ -129,11 +118,13 @@
             </table>
           </div>
 
+          <!-- Coupon code text field -->
           <div class="form-group input-group">
-            <input type="text" class="form-control" placeholder="Coupon Code">
-            <button type="button" class="btn btn-primary" id="coupon_code">Apply</button>
+            <input type="text" class="form-control" placeholder="Coupon Code" id="coupon-code">
+            <button type="button" class="btn btn-primary not-applied" id="coupon-apply">Apply</button>
           </div>
 
+          <p id="coupon-success"></p>
         </div>
 
       </div>
