--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -1,3 +1,5 @@
+<!-- Base template is taken from https://www.digitalocean.com/community/tutorials/how-to-add-authentication-to-your-app-with-flask-login -->
+
 <html>
     <head>
         <meta charset="utf-8">
