--- a/project/templates/signup.html
+++ b/project/templates/signup.html
@@ -1,3 +1,4 @@
+<!-- Signup template is taken from https://www.digitalocean.com/community/tutorials/how-to-add-authentication-to-your-app-with-flask-login -->
 {% extends "base.html" %}
 
 {% block content %}
